# slarti-history

./: .gitignore  CMakeLists.txt  DUNGEON_GEN  Gemfile  LICENCE  README  Rakefile  build.xml  build_configuration.rb  environment
assets/Materials/: Part.j3md  RockyTeapot.j3m  Selected.j3m
assets/Prefabs/: hallway.yml
assets/Shaders/Part/: Part.frag  Part.vert
assets/databases/: constructs.sqlite  user_settings.sqlite
design/: Rakefile
design/lib/: brush.rb  construct.rb  geometry.rb  part.rb  workspace.rb
design/test/: brush_test.rb  construct_test.rb  geometry_test.rb  part_test.rb  workspace_test.rb
doc/: components.txt  ui.txt  unit_scale.txt
include/: Actor.h  BaseApplication.h  Burrower.h  CameraManager.h  Event.h  Game.h  InputDispatcher.h  InputManager.h  KeyboardEvent.h  Level.h  Panel.h  Planet.h  Prefab.h  PrefabManager.h  QtEventConverter.h  Roomer.h  SolarSystem.h  Star.h  Utils.h  VoxelLevelGenerator.h  VoxelVolume.h
include/PolyVox/: Array.h  CubicSurfaceExtractor.inl  Filters.inl  MeshFace.h  MeshVertex.h  Region.h  SurfaceExtractor.inl  SurfaceMesh.h  SurfaceTypes.h  SurfaceVertex.h  Vector.h  Volume.h  Volume.inl  VolumeSampler.h
include/PolyVox/PolyVoxImpl/: TypeDef.h  Utility.h
include/components/: CameraComponent.h  Component.h  InputComponent.h  MeshComponent.h  MouseLookComponent.h  MovementComponent.h  PanelComponent.h  PrefabComponent.h  ShipComponent.h  ShipInputComponent.h  ThrustComponent.h  ThrusterInputComponent.h  TransformComponent.h
include/generators/: LevelGenerator.h  PlanetGenerator.h  StarGenerator.h
include/generators/voxel/: Burrower.h  SurfacePatchRenderable.h  VoxelVolume.h
include/generators/voxel/PolyVox/: ArraySizes.h  CubicSurfaceExtractor.h  Filters.h  GradientEstimators.h  GradientEstimators.inl  Log.h  MaterialDensityPair.h  Mesh.h  MeshEdge.h  PolyVoxForwardDeclarations.h  SurfaceExtractor.h  VolumeSampler.inl  VoxelFilters.h
include/managers/: CameraManager.h  ComponentManager.h  InputManager.h  MeshManager.h  ShipManager.h  ThrustManager.h  TransformManager.h
include/procedural/: ProceduralPlatform.h
include/ui/: RenderInterfaceOgre3D.h  SystemInterfaceOgre3D.h  UIManager.h
media/materials/programs/: SimpleTexture.cg  SimpleTexture.program  SurfacePatchVP.cg  SurfacePatchVP.program  TriplanarTextureFP.cg
media/materials/scripts/: SimpleTexture.material  Station.material  TriplanarTexture.material  dirt.material
media/models/: sphere.mesh
media/prefabs/: dock.yml  hallway.yml
media/ui/styles/: debug.rcss
media/ui/templates/: debug.rml
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
proto/: simple_app.mirah
ruby/: station_builder.rb
src/: Actor.cpp  BaseApplication.cpp  Burrower.cpp  CameraManager.cpp  Event.cpp  Game.cpp  InputDispatcher.cpp  InputManager.cpp  Level.cpp  Planet.cpp  PrefabManager.cpp  Roomer.cpp  SolarSystem.cpp  Star.cpp  SurfacePatchRenderable.cpp  TinyOgre.cpp  TutorialApplication.cpp  Utils.cpp  main.cpp  simple_app.mirah
src/PolyVox/: GradientEstimators.cpp  Log.cpp  Mesh.cpp  MeshEdge.cpp  MeshVertex.cpp  Region.cpp
src/PolyVox/PolyVoxImpl/: MarchingCubesTables.cpp
src/components/: ShipComponent.cpp
src/generators/: LevelGenerator.cpp  PlanetGenerator.cpp  StarGenerator.cpp
src/generators/voxel/: Burrower.cpp  VoxelLevelGenerator.cpp
src/generators/voxel/PolyVox/: ArraySizes.cpp  MeshFace.cpp  SurfaceMesh.cpp  SurfaceVertex.cpp  VoxelFilters.cpp
src/managers/: CameraManager.cpp  InputManager.cpp  MeshManager.cpp  ShipManager.cpp  ThrustManager.cpp  TransformManager.cpp
src/org/slartibartfast/: Actor.java  ActorFactory.java  ActorManager.java  App.java  Axis.java  AxisDefinition.java  Behavior.java  BehaviorController.java  Construct.java  ConstructData.java  ConstructDataProvider.java  ConstructEditor.java  ConstructFactory.java  EditorAppState.java  EditorGameState.java  Events.java  GeometryFactory.java  Grid.java  InputEvent.java  InputReceiver.java  InputSystem.java  Keys.java  MaterialFactory.java  Part.java  PartManipulator.java  PhysicsTest.java  PrefabLoader.java  SceneGraph.java  UnknownEventError.java  UnknownEventException.java  UserKeyMapping.java  UserMouseMapping.java  UserSettings.java
src/org/slartibartfast/assets/: Panel.java
src/org/slartibartfast/behaviors/: CameraBehavior.java  ConstructBehavior.java  DirectionalLightBehavior.java  FollowingBehavior.java  InputBehavior.java  LightBehavior.java  Physical.java  PhysicalBehavior.java  PhysicsBehavior.java  PlayerPhysicsBehavior.java  PointLightBehavior.java  TransformBehavior.java  VisualBehavior.java
src/org/slartibartfast/dataProviders/: DataResults.java  IDataProvider.java  SQLiteDataProvider.java
src/org/slartibartfast/dataSources/: DataSource.java  IDataSource.java  SQLiteDataSource.java
src/org/slartibartfast/dataStores/: ConstructDataStore.java  DataRepository.java  DataResults.java  DataStoreManager.java  IDataSource.java  (+2 more)
src/ui/: RenderInterfaceOgre3D.cpp  SystemInterfaceOgre3D.cpp  UIManager.cpp
test/org/: AllTests.java
test/org/slartibartfast/: ActorFactoryTest.java  ActorManagerTest.java  ActorTest.java  AxisTest.java  BaseSuite.java  BehaviorControllerTest.java  ConstructFactoryTest.java  ConstructTest.java  EditorGameStateTest.java  EventsTest.java  Factories.java  GeometryFactoryTest.java  GridTest.java  InputSystemTest.java  KeysTest.java  MaterialFactoryTest.java  PartManipulatorTest.java  PartTest.java  SceneGraphTest.java  UserKeyMappingTest.java  UserMouseMappingTest.java  UserSettingsTest.java
work/: grid.pxm  playing.pxm
work/textures/: Glass.pxm  Grid.pxm
(+51 files in other folders)
